--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -608,12 +608,23 @@ function obtenerProducto(id) {
         },
         19: { 
             name: "Calza Corta Deportiva Mujer", 
-            price: 7999, 
+            price: 7990, 
             images: {
-                "Negro": "assets/products/calza-corta-mujer.jpg"
+                "Negro": "Calzanegro.png",
+                "Gris": "calzagris.png",
+                "Azul": "Calzaazul.png",
+                "Blanco": "Calzablanca.png",
+                "Cebra": "Calzacebra.png",
+                "Celeste": "Calzaceleste.png",
+                "Fucsia": "calzafucsia.png",
+                "Roja": "Calzaroja.png",
+                "Rosa": "Calzarosa.png",
+                "Verde/Rojo": "Calzarosaverde.png",
+                "Verde": "Calzaverde.png",
+                "Galaxi": "Calzagalactica.png"
             }, 
             sizes: ["XS", "S", "M", "L"], 
-            colors: ["Negro", "Azul", "Blanco", "Cebra", "Celeste", "Galaxi", "Roja", "Rosa", "Verde/Rojo", "Verde"],
+            colors: ["Negro", "Gris", "Azul", "Blanco", "Cebra", "Celeste", "Galaxi", "Roja", "Rosa", "Verde/Rojo", "Verde", "Fucsia"],
             tags: ["nuevo"]
         },
         20: { 
