--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -784,6 +784,17 @@ function obtenerProducto(id) {
             sizes: ["S", "M"], 
             colors: ["Rosa"],
             tags: ["nuevo"]
+        },
+        35: { 
+            name: "Pantalon Corto Deportivo", 
+            price: 10000, 
+            images: {
+                "Negro": "pantaloncorto.jpeg",
+                "Azul": "pantaloncortoazul.jpeg",
+                "Blanco": "pantaloncortoblanco.jpeg"
+            }, 
+            sizes: ["S", "M", "L", "XL", "XXL"], 
+            colors: ["Negro", "Azul", "Blanco"]
         }
     };
     return productos[id];
